[package]
name = "bmp280"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
snafu = {version = "0.6.10", default_features = false }
defmt = "0.1.3"

[dev-dependencies]
embedded-hal-mock = "0.7.2"
