[package]
name = "bmp280-rs"
version = "0.1.1"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"
repository = "https://github.com/pietgeursen/bmp280-rs"
description = "I2C driver for the bmp280 termperature and air pressure sensor."
license =  "AGPL-3.0"
keywords = ["no_std", "embedded-hal", "bmp280", "sensor", "driver"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
snafu = {version = "0.6.10", default_features = false }
defmt = "0.1.3"

[dev-dependencies]
embedded-hal-mock = "0.7.2"
